<resources>
    <string name="app_name">地球人</string>
    <string name="tab_home">首页</string>
    <string name="tab_friends">好友</string>
    <string name="tab_chat">聊天</string>
    <string name="tab_circle">圈子</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_mine">我的</string>
    <string name="save">保存</string>
    <string name="loading">加载中...</string>
    <string name="logining">登录中...</string>
    <string name="hint_no_data">暂无数据</string>
    <string name="hint_save_ing">保存中...</string>
    <string name="hint_save_success">保存成功！</string>
    <string name="hint_save_field">保存失败！</string>
    <string name="edit">编辑</string>
    <string name="edit_success">修改成功</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_field">删除失败！</string>
    <string name="cancle">取消</string>
    <string name="hint">提示</string>
    <string name="selectpayment">选择支付方式</string>
    <string name="please_enter">请输入...</string>
    <string name="data_error">数据有误</string>
    <string name="content_cannot_empty">内容不能为空...</string>
    <string name="circle_delete_confirm">确定删除这个圈子吗？</string>
    <string name="friend_delete_confirm">确定删除这个好友吗？</string>
    <string name="friend_avater_confirm">确定去激活这个好友吗？</string>
    <string name="currency_activation">激活币</string>
    <string name="currency_earth">地球币</string>
    <string name="currency_weixinpay">微信支付</string>
    <string name="currency_alipay">支付宝</string>
    <string name="week">周</string>
    <string name="text_1">总字数300个，剩余</string>
    <string name="text_2">个</string>
    <string name="input_content">请输入内容！</string>
    <string name="choise_max_tips">选择超过最大张数</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">更新中&#8230;</string>
    <string name="header_hint_refresh_time">上次刷新：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开加载更多</string>
    <string name="footer_tips">没有更多数据了</string>
    <string name="scan_des">将二维码放入框中，即可扫描</string>
    <string name="scan">扫一扫</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="comany_introduce">公司介绍</string>
    <string name="company_introduce_des">《地球人网》是由湖南球谱科技有限公司自主开发、研究、运营的一个承载个人历史的互联网商业平台。互联网上建一个地球人的网上档案馆，把个人历史汇聚，承载着每个人的历史轨迹。湖南球谱科技有限公司坐落在湖南省长沙经济开发区</string>
    <string name="company_news">公司新闻</string>
    <string name="earth_news">地球人新闻</string>
    <string name="world_news">世界新闻</string>
    <string name="paihangbang">推广排行</string>
    <string name="more_paihang">更多排行</string>
    <string name="neichen">昵称：%1$s</string>
    <string name="diqiuren_id">地球人代码：%1$s</string>
    <string name="renqi">人气</string>
    <string name="kuaijie">快捷\n导航</string>
    <string name="pop_scan">扫一扫</string>
    <string name="pop_add_friend">添加好友</string>
    <string name="pop_create_friend">添加好友</string>
    <string name="pop_discussion_groups">创建讨论组</string>
    <string name="pop_group">创建高级群</string>
    <string name="pop_group_search">搜索高级群</string>
    <string name="pop_share">分享</string>
    <string name="pop_setting">设置备注/分组</string>
    <string name="pop_delete">删除好友</string>
    <string name="pop_chat">找他聊天</string>
    <string name="video_region">视频专区</string>
    <string name="get_more">查看更多</string>
    <string name="earth_man_fengcai">地球人风采</string>
    <string name="earth_man_wenxue">地球人文学</string>
    <string name="earth_man_love">爱的呼唤</string>
    <string name="earth_man_poetry">诗词歌赋</string>
    <string name="earth_man_periodical">地球人期刊</string>
    <string name="earth_man_story">大小故事</string>
    <string name="earth_man_benefit">地球人公益</string>
    <string name="find_someone">寻人启事</string>
    <string name="find_someone_detial">铺就一条回家的路</string>
    <string name="social_benefit">社会公益</string>
    <string name="social_benefit_detial">一点爱心,照亮世界</string>
    <string name="hope_project">希望工程</string>
    <string name="hope_project_detial">伸出友爱手,希望满人间</string>
    <string name="hort_heart">爱心活动</string>
    <string name="hort_heart_detial">献出爱心,温暖世间真情</string>
    <string name="share_success_string">分享成功</string>
    <string name="share_failed_string">分享失败</string>
    <string name="share_app_title">地球人下载</string>
    <string name="earth_man_ranking_list">排行榜</string>
    <string name="go_pay">去支付</string>
    <string name="go_pay_later">暂不支付</string>
    <string name="ten_peryear">(10元/年)</string>
    <string name="choose_year">请选择缴费年份：</string>
    <string name="one_year">1年</string>
    <string name="input_nianfen">请输入缴费年份</string>
    <string name="register">注册</string>
    <string name="register2">替好友注册</string>
    <string name="register3">添加亲情号</string>
    <string name="input_earthid">请输入分享人的地球人代码</string>
    <string name="life_service_pay"><![CDATA[<font color="#3c3c3c">您的终身服务费为：</font><font color="#ff211e">¥%1$s</font>]]></string>
    <string name="should_pay"><![CDATA[<font color="#3c3c3c">需要支付：</font><font color="#ff211e">¥%1$s</font>]]></string>
    <string name="chose_address">请选择地址</string>
    <string name="nick">请输入昵称</string>
    <string name="phone_num">请输入手机号码</string>
    <string name="code">请输入获取的验证码</string>
    <string name="password">请设置账户密码</string>
    <string name="password2">请再次确认账户密码</string>
    <string name="get_code">获取验证码</string>
    <string name="birthday">请选择出生年月</string>
    <string name="notice">温馨提示：出生年月选择后，终生不可修改</string>
    <string name="user_id">请输入手机号码或者地球人代码</string>
    <string name="user_psw">请输入密码</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="login">登   录</string>
    <string name="login_youke_hint">请输入手机号码或邮箱</string>
    <string name="or">或者</string>
    <string name="userlogin">登录</string>
    <string name="regist_login">注册</string>
    <string name="youke_login">访客登录</string>
    <string name="regist">下一步</string>
    <string name="authorization_failed">授权失败</string>
    <string name="authorization_cancel">"授权取消"</string>
    <string name="get_data">"获取平台数据开始..."</string>
    <string name="commit">提交</string>
    <string name="find_psw_title">忘记密码</string>
    <string name="new_friend_news">新的朋友</string>
    <string name="add_friend_1">加好友</string>
    <string name="clear_firiend_list">清空成功</string>
    <string name="set_permissions">权限</string>
    <string name="personal_detial_explain">个人资料（查看隐私资料需支付2地球币）</string>
    <string name="personal_detial_name">姓名</string>
    <string name="personal_detial_nick">昵称</string>
    <string name="personal_detial_id">个人ID</string>
    <string name="personal_detial_sex">性别</string>
    <string name="personal_detial_birthday">生日</string>
    <string name="personal_detial_blood_type">血型</string>
    <string name="personal_detial_Height">身高</string>
    <string name="personal_detial_weight">体重</string>
    <string name="personal_detial_phone">联系方式</string>
    <string name="personal_detial_affective_state">情感状态</string>
    <string name="personal_detial_education_background">学历</string>
    <string name="personal_detial_zhiye">职业</string>
    <string name="personal_detial_jinjilianxiren">紧急联系人</string>
    <string name="personal_detial_work_place">工作地点</string>
    <string name="personal_detial_jiguan">籍贯</string>
    <string name="personal_detial_gexing">个性签名</string>
    <string name="personal_detial_pay2see">付费查看</string>
    <string name="personal_detail_heads_img">头像</string>
    <string name="personal_detail_userid">个人ID</string>
    <string name="personal_detail_alert">温馨提示：姓名只可修改一次</string>
    <string name="personal_death">去敬献</string>
    <string name="add_friend_hint">地球人代码/手机号/昵称</string>
    <string name="input_keyword">请输入搜索关键字</string>
    <string name="add_friend">加为好友</string>
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="look">查找</string>
    <string name="clear">清空</string>
    <string name="myaccount">我的账户</string>
    <string name="myqrcode">二维码</string>
    <string name="scan_code_fail">二维码扫描失败，请选择地球人二维码进行扫码</string>
    <string name="myaccount_info">账户信息</string>
    <string name="myaccount_bank_list">银行卡列表</string>
    <string name="myaccount_recharge">地球币</string>
    <string name="myaccount_tixian">提现</string>
    <string name="myaccount_jiechu_bind_phone">更换手机号</string>
    <string name="myaccount_qinqing">亲情号</string>
    <string name="quanzichoise">选择圈子</string>
    <string name="circle_create">创建圈子</string>
    <string name="circle_existing">已有圈子</string>
    <string name="circle_edit">编辑圈子</string>
    <string name="please_enter_circle_name">请输入圈子名称...</string>
    <string name="edit_job_title">职业选择</string>
    <string name="edit_job_hint">请输入职业...</string>
    <string name="edit_height_hint">请输入身高(cm)</string>
    <string name="edit_wight_hint">请输入体重(kg)</string>
    <string name="myaccount_info_id">地球人代码</string>
    <string name="myaccount_info_youxiaoqi">会员有效期</string>
    <string name="myaccount_info_yuer">地球币余额</string>
     <string name="myaccount_info_currencyatv">激活币余额</string>
    <string name="myaccount_info_currencyem">地球币余额</string>
    <string name="activite_info_yuer">支付金额(地球币)</string>
    <string name="myaccount_info_regist_time">注册时间</string>
    <string name="mine_myfriend">我的朋友</string>
    <string name="mine_i_see">我看过谁</string>
    <string name="mine_see_me">谁看过我</string>
    <string name="mine_chage">交易记录</string>
    <string name="mine_my_setting">个人设置</string>
    <string name="mine_zhuanzhang">转账</string>
    <string name="mine_huafei">话费充值</string>
    <string name="mine_daitizhuce">代替好友注册</string>
    <string name="mine_daitijihuo">代替好友激活</string>
    <string name="mine_jihuo">激活账户</string>
    <string name="mine_yaoqing">邀请注册</string>
    <string name="mine_share">分享者</string>
    <string name="mine_family_phone">亲情号</string>
    <string name="mine_jishi">天天记事</string>
    <string name="mine_zhengwen">有奖征文</string>
    <string name="mine_jiankang">健康管理中心</string>
    <string name="mine_setting">设置</string>
    <string name="mine_tongxunlubackup">通讯录备份</string>
    <string name="input_cardnum">请输入您的银行卡卡号</string>
    <string name="card_num">卡号</string>
    <string name="bankcard_num">银行卡号</string>
    <string name="zhengjianleixing">证件类型</string>
    <string name="shenfenzheng">身份证</string>
    <string name="shenfenzhenghao">身份证号</string>
    <string name="zhengjianhao">证件号码</string>
    <string name="franchise_application_alert">特别申明：此申请为特许权限，请仔细阅读下面相关提示。</string>
    <string name="application_conditions">申请死亡的特许条件和事宜:</string>
    <string name="application_conditions_one">1、申请人必须属于此亲属关系(指父、母、子、女);</string>
    <string name="application_conditions_two">2、申请人必须由此亲属关系两人组成同步申请(指父、母,兄、弟、姊、妹等亲属);</string>
    <string name="application_conditions_three">3、申请人必须由5人以上的共同好友同步申请(同学、好友);</string>
    <string name="application_conditions_for">4、地球人代码无任何申请人申请死亡时，系统在150年后自动默认为死亡;</string>
    <string name="application_conditions_five">5、地球人特殊人群“冷冻人”“实验人”“医学人”可以特许申请复活;</string>
    <string name="application_conditions_six">6、申请人应富有崇高的使命感和责任感，若申请有误，直接影响申请人个人信誉;</string>
    <string name="application_conditions_summary">6、被申请人死亡后的“地球人代码资讯”，个人公开资讯和个人收费资讯将继续保持，五年后，五级防护的深度信息系统将默认“收费资讯”公开！</string>
    <string name="input_earth_id">请输入被申请人地球人代码</string>
    <string name="daifu_tips">请输入代付人信息</string>
    <string name="daifu_phone_tips">请输入代付人代码或手机号</string>
    <string name="daifu_liuyan_tips">请输入留言信息，最多10个字</string>
    <string name="daifu_commit">确认</string>
    <string name="wenzi">文字</string>
    <string name="dynamic_fabu">发布动态</string>
    <string name="pick_photo">照片</string>
    <string name="cancel">取消</string>
    <string name="invite_friend">邀请好友</string>
    <string name="cancel_invite">取消邀请</string>
    <string name="weixin">微信</string>
    <string name="weixin_circle">微信朋友圈</string>
    <string name="sms">短信</string>
    <string name="facebook">facebook</string>
    <string name="delete">删除</string>
</resources>