<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_tab_bg"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black5"
        android:textSize="14sp"
        android:text="@string/invite_friend"
        android:background="@color/wite"
        android:gravity="center_horizontal"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wite"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        >
        <TextView 
            android:id="@+id/weixin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/weixin"
            android:textColor="@color/black1"
            android:drawableTop="@drawable/weixin_green"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/weixin_circle" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/weixin_circle"
            android:textColor="@color/black1"
            android:drawableTop="@drawable/weixin_circle"
            android:paddingTop="20dp"
            android:paddingStart="20dp"
            android:textSize="14sp"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/sms"  
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms"
            android:gravity="center"
            android:textColor="@color/black1"
             android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:drawableTop="@drawable/sms"
            android:textSize="14sp"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/facebook" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/facebook"
            android:textColor="@color/black1"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:drawableTop="@drawable/facebook"
            android:textSize="14sp"
            android:visibility="gone"
            android:drawablePadding="5dp"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_background"/>
    <TextView 
        android:id="@+id/cancel_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black5"
        android:textSize="14sp"
        android:text="@string/cancel_invite"
        android:gravity="center_horizontal"
        />

</LinearLayout>
