<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@drawable/list_item_selector"
    android:gravity="center_vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black_9"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/xml_btn_red_light_selector"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/btn_delete"
        android:background="@drawable/xml_btn_blue_light_selector"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>